Java 9 migration updates: temporary removed SPI, as it seems like implementation classes must be specified in separate modules, and tests doesn't allow to do that; temporary removed aspectj, as it seems like it doesn't correctly work with Java 9 yet; fixed an issue with User model, related to missing toString / equals / hashcode; added more tweaks into build.gradle and module-info.java for granting reflection access to different modules;